= CHANGES

== 0.9.23 (Unreleased)

* Allow 406 on (.format) urls via a flag
* Adds method_override flag to Padrino by default

== 0.9.22

* Fix no more password encryption when password is blank
* Fix mongoid dependency
* Fix admin mongomapper template to encrypt password
* Allow disabling of Padrino::Logger via :padrino_logging
* Use Sinatra::Base instead of Sinatra::Application
* Added Japanese Translations [Thanks to udzura]
* set status to 406 on non-provided ACCEPTS
* returns first provided mime-type on ACCEPT = */*
* assume */* if no ACCEPT header is given

== 0.9.21

* Support of regex captures in routes
* Fixed routing issues with :index
* Creation of empty directories for images/javascripts/stylesheets/tmp
* Updated mongomapper adapter to use rails3 branch
* Removed snowtag
* Updated datamapper gen to store correctly passwords
* Added Slim template to Padrino Admin [Thanks to Matthew Winter]
* Added Traditional Chinese support(zh_tw) [Thanks to ayamomiji]
* Include padrino-cache gem as part of standard install
* Added Rake Task for Mongoid
* Ensure project name are valid
* Removed erubis support
* Refactored the output handlers for helpers
* Improves select_tag 'selected' option
* Basic nested object form support
* Updated mongoid adapter to use 2.0.0.beta.20
* Remove legacy bundler setup from config/boot.rb
* Change to routes to fix param assembly order
* Fixed optional parameter routing test
* Fixes error_message_on object name bug [Thanks craigp]
* Removed default index page
* Fetch Layout Path in app/views and app/views/layouts with :layout => :foo
* Fixes issue with layout and format resolution in render
* Added Simplified Chinese support(zh_cn)

== 0.9.20

* Removed Rspec1 generator
* Upgraded router to 0.5.0
* Allow adding middlewares in front of the router
* Fixed DataMapper Admin Adapter and Encrypt Passwords
* Changed default ActiveRecord config with :reconnect => true
* Added basic erubis support to the admin