@@ -20,13 +20,13 @@ class TestRouting < Test::Unit::TestCase
   end
 
   should 'fail with unrecognized route exception when not found' do
-    unrecognized_app = mock_app do
+    mock_app do
       get(:index){ "okey" }
     end
-    assert_nothing_raised { get unrecognized_app.url_for(:index) }
+    assert_nothing_raised { get @app.url_for(:index) }
     assert_equal "okey", body
     assert_raises(Padrino::Routing::UnrecognizedException) {
-      get unrecognized_app.url_for(:fake)
+      get @app.url_for(:fake)
     }
   end
 
@@ -170,6 +170,29 @@ class TestRouting < Test::Unit::TestCase
     assert_equal 404, status
   end
 
+  should 'use padrino url method' do
+    mock_app do
+    end
+
+    assert_equal @app.method(:url).owner, Padrino::Routing::ClassMethods
+  end
+
+  should 'work correctly with sinatra redirects' do
+    mock_app do
+      get(:index)  { redirect url(:index) }
+      get(:google) { redirect "http://google.com" }
+      get("/foo")  { redirect "/bar" }
+      get("/bar")  { "Bar" }
+    end
+
+    get "/"
+    assert_equal "http://example.org/", headers['Location']
+    get "/google"
+    assert_equal "http://google.com", headers['Location']
+    get "/foo"
+    assert_equal "http://example.org/bar", headers['Location']
+  end
+
   should "return 406 on Accept-Headers it does not provide" do
     mock_app do
       get(:a, :provides => [:html, :js]){ content_type }
@@ -178,7 +201,7 @@ class TestRouting < Test::Unit::TestCase
     get "/a", {}, {"HTTP_ACCEPT" => "application/yaml"}
     assert_equal 406, status
   end
-  
+
   should "return 406 on file extensions it does not provide and flag is set" do
     mock_app do
       enable :treat_format_as_accept
@@ -188,7 +211,7 @@ class TestRouting < Test::Unit::TestCase
     get "/a.xml", {}, {}
     assert_equal 406, status
   end
-  
+
   should "return 404 on file extensions it does not provide and flag is not set" do
     mock_app do
       get(:a, :provides => [:html, :js]){ content_type }
@@ -197,16 +220,16 @@ class TestRouting < Test::Unit::TestCase
     get "/a.xml", {}, {}
     assert_equal 404, status
   end
-  
+
   should "not set content_type to :html if Accept */* and html not in provides" do
     mock_app do
       get("/foo", :provides => [:json, :xml]) { content_type.to_s }
     end
-    
+
     get '/foo', {}, { 'HTTP_ACCEPT' => '*/*;q=0.5' }
     assert_equal 'json', body
   end
-  
+
   should "return the first content type in provides if accept header is empty" do
     mock_app do
       get(:a, :provides => [:js]){ content_type.to_s }
@@ -788,7 +811,7 @@ class TestRouting < Test::Unit::TestCase
     assert_equal 'Foo in xml', body
     get '/foo'
     assert_equal 'Foo in xml', body
-    
+
     get '/bar', {}, { 'HTTP_ACCEPT' => 'application/xml' }
     assert_equal 'Bar in html', body
   end
